--- a/notebooks/06_load_excel_files/06_load_excel_files.ipynb
+++ b/notebooks/06_load_excel_files/06_load_excel_files.ipynb
@@ -3,6 +3,14 @@
   "kernelspec": {
    "display_name": "Streamlit Notebook",
    "name": "streamlit"
+  },
+  "lastEditStatus": {
+   "notebookId": "h7vonv4nbhh3fm5uqdys",
+   "authorId": "143154484062",
+   "authorName": "MIKED",
+   "authorEmail": "mikes.tech.stuff@outlook.com",
+   "sessionId": "a3fda6b4-1a84-4167-9c27-198a550cfa40",
+   "lastEditTime": 1742361384975
   }
  },
  "nbformat_minor": 5,
@@ -15,7 +23,7 @@
     "name": "md_overview",
     "collapsed": false
    },
-   "source": "# 06 Load Excel Files\n\n* Author: Jeremiah Hansen\n* Last Updated: 10/25/2024\n\nThis notebook will load data into the `LOCATION` and `ORDER_DETAIL` tables from Excel files.\n\nThis currently does not use Snowpark File Access as it doesn't yet work in Notebooks. So for now we copy the file locally first."
+   "source": "# 06 Load Excel Files\n\n* Author: Jeremiah Hansen\n* Last Updated: 10/25/2024\n\nload data into `LOCATION` and `ORDER_DETAIL` tables from Excel files.\n\ndoes not use Snowpark File Access as it doesn't yet work in Notebooks. So for now we copy the file locally first."
   },
   {
    "cell_type": "code",
@@ -36,7 +44,7 @@
     "name": "py_imports",
     "collapsed": false
    },
-   "source": "# Import python packages\nimport logging\nimport pandas as pd\n\nlogger = logging.getLogger(\"demo_logger\")\n\n# Get the target database and schema using the results from the SQL cell above\n# This won't be needed when we can pass variables to Notebooks!\ncurrent_context_df = cells.sql_get_context.to_pandas()\ndatabase_name = current_context_df.iloc[0,0]\nschema_name = current_context_df.iloc[0,1]\n\n# We can also use Snowpark for our analyses!\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\n#session.use_schema(f\"{database_name}.{schema_name}\")\n\nlogger.info(\"06_load_excel_files start\")",
+   "source": "# Import python packages\nimport logging\nimport pandas as pd\n\nlogger = logging.getLogger(\"demo_logger\")\n\n# Get target database and schema using results from SQL cell above .  won't be needed when we can pass variables to Notebooks!\n\ncurrent_context_df = cells.sql_get_context.to_pandas()\ndatabase_name      = current_context_df.iloc[0,0]     # DEMO_DB\nschema_name        = current_context_df.iloc[0,1]     # DEV_SCHEMA\n\n\nfrom snowflake.snowpark.context import get_active_session  # can also use Snowpark for analyses!\nsession = get_active_session()\n#session.use_schema(f\"{database_name}.{schema_name}\")\n\nlogger.info(\"06_load_excel_files start\")",
    "execution_count": null,
    "outputs": []
   },
@@ -49,7 +57,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": "-- Temporary solution to load in the metadata, this should be replaced with a directy query to a directory table (or a metadata table)\nSELECT '@INTEGRATIONS.FROSTBYTE_RAW_STAGE/intro/order_detail.xlsx' AS STAGE_FILE_PATH, 'order_detail' AS WORKSHEET_NAME, 'ORDER_DETAIL' AS TARGET_TABLE\nUNION\nSELECT '@INTEGRATIONS.FROSTBYTE_RAW_STAGE/intro/location.xlsx', 'location', 'LOCATION';",
+   "source": "-- Temp solution to load in metadata, should be replaced with directy query to a directory table (or a metadata table)\n       SELECT '@INTEGRATIONS.FROSTBYTE_RAW_STAGE/intro/order_detail.xlsx' AS STAGE_FILE_PATH, 'order_detail' AS WORKSHEET_NAME, 'ORDER_DETAIL' AS TARGET_TABLE\nUNION  SELECT '@INTEGRATIONS.FROSTBYTE_RAW_STAGE/intro/location.xlsx'                       , 'location'                      , 'LOCATION';",
    "execution_count": null
   },
   {
@@ -70,7 +78,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": "import os\nfrom openpyxl import load_workbook\n\ndef load_excel_worksheet_to_table_local(session, stage_file_path, worksheet_name, target_table):\n  local_directory = \"./\"\n  file_name = os.path.basename(stage_file_path)\n\n  # First copy file from stage to local storage\n  get_status = session.file.get(stage_file_path, local_directory)\n\n  with open(f\"{local_directory}{file_name}\", 'rb') as f:\n    workbook = load_workbook(f)\n    sheet = workbook[worksheet_name]\n    data = sheet.values\n\n    # Get the first line in file as a header line\n    columns = next(data)[0:]\n    # Create a DataFrame based on the second and subsequent lines of data\n    df = pd.DataFrame(data, columns=columns)\n \n    df2 = session.create_dataframe(df)\n    df2.write.mode(\"overwrite\").save_as_table(target_table)\n \n  return True",
+   "source": "import os\nfrom openpyxl import load_workbook\n\ndef load_excel_worksheet_to_table_local(session, \n                                        stage_file_path, \n                                        worksheet_name, \n                                        target_table):\n  local_directory = \"./\"\n  file_name       = os.path.basename(stage_file_path)\n  get_status      = session.file.get(stage_file_path, local_directory)    # copy file from stage to local\n\n  with open(f\"{local_directory}{file_name}\", 'rb') as f:\n      \n    workbook = load_workbook(f)\n    sheet    = workbook[worksheet_name]\n    data     = sheet.values\n    columns  = next(data)[0:]                       # Get first line in file as header\n    df       = pd.DataFrame(data, columns=columns)  # Create DataFrame based on second and subsequent lines\n    df2      = session.create_dataframe(df)\n      \n    df2.write.mode(\"overwrite\").save_as_table(target_table)\n \n  return True",
    "execution_count": null
   },
   {
@@ -90,7 +98,7 @@
     "name": "py_process_spreadsheets"
    },
    "outputs": [],
-   "source": "# Process each file from the sql_get_spreadsheets cell above\nfiles_to_load = cells.sql_get_spreadsheets.to_pandas()\nfor index, excel_file in files_to_load.iterrows():\n    logger.info(f\"Processing Excel file {excel_file['STAGE_FILE_PATH']}\")\n    load_excel_worksheet_to_table_local(session, excel_file['STAGE_FILE_PATH'], excel_file['WORKSHEET_NAME'], excel_file['TARGET_TABLE'])\n\nlogger.info(\"06_load_excel_files end\")",
+   "source": "# Process each file from sql_get_spreadsheets cell above\n\nfiles_to_load = cells.sql_get_spreadsheets.to_pandas()\n\nfor index, excel_file in files_to_load.iterrows():\n    \n    logger.info(f\"Processing Excel file {excel_file['STAGE_FILE_PATH']}\")\n    \n    load_excel_worksheet_to_table_local(\n                                        session, \n                                        excel_file['STAGE_FILE_PATH'], \n                                        excel_file['WORKSHEET_NAME' ], \n                                        excel_file['TARGET_TABLE'   ]\n                                       )\n    \n\nlogger.info(\"06_load_excel_files end\")",
    "execution_count": null
   },
   {
@@ -110,7 +118,7 @@
     "name": "sql_debugging"
    },
    "outputs": [],
-   "source": "--DESCRIBE TABLE LOCATION;\n--SELECT * FROM LOCATION;\n--SHOW TABLES;",
+   "source": "--DESCRIBE TABLE LOCATION;\n--SELECT * FROM LOCATION;\nSHOW TABLES;",
    "execution_count": null
   }
  ]
