--- a/notebooks/07_load_daily_city_metrics/07_load_daily_city_metrics.ipynb
+++ b/notebooks/07_load_daily_city_metrics/07_load_daily_city_metrics.ipynb
@@ -3,6 +3,14 @@
   "kernelspec": {
    "display_name": "Streamlit Notebook",
    "name": "streamlit"
+  },
+  "lastEditStatus": {
+   "notebookId": "6dilbx3dorbcknddvbi6",
+   "authorId": "143154484062",
+   "authorName": "MIKED",
+   "authorEmail": "mikes.tech.stuff@outlook.com",
+   "sessionId": "25cc7767-7afd-421e-af99-df53891cb21d",
+   "lastEditTime": 1742406711828
   }
  },
  "nbformat_minor": 5,
@@ -15,7 +23,7 @@
     "name": "md_overview",
     "collapsed": false
    },
-   "source": "# 07 Load Daily City Metrics\n\n* Author: Jeremiah Hansen\n* Last Updated: 6/11/2024\n\nThis notebook will load data into the `DAILY_CITY_METRICS` table with support for incremental processing."
+   "source": "# 07 Load Daily City Metrics\n\nload data into `DAILY_CITY_METRICS` with incremental processing."
   },
   {
    "cell_type": "code",
@@ -37,7 +45,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": "# Import python packages\nimport logging\nfrom snowflake.core import Root\n\nlogger = logging.getLogger(\"demo_logger\")\n\n# Get the target database and schema using the results from the SQL cell above\n# This won't be needed when we can pass variables to Notebooks!\ncurrent_context_df = cells.sql_get_context.to_pandas()\ndatabase_name = current_context_df.iloc[0,0]\nschema_name = current_context_df.iloc[0,1]\n\n# We can also use Snowpark for our analyses!\nfrom snowflake.snowpark.context import get_active_session\nsession = get_active_session()\n#session.use_schema(f\"{database_name}.{schema_name}\")\n\nlogger.info(\"07_load_daily_city_metrics start\")",
+   "source": "# Import python packages\nimport logging\nfrom snowflake.core import Root\n\nlogger = logging.getLogger(\"demo_logger\")\n\ncurrent_context_df = cells.sql_get_context.to_pandas()       # Get schema from \"sql_get_context\" above #  won't be needed when we can pass variables to Notebooks!\ndatabase_name      = current_context_df.iloc[0,0]\nschema_name        = current_context_df.iloc[0,1]\n\n   \nfrom snowflake.snowpark.context import get_active_session    # We can also use Snowpark for our analyses!\nsession = get_active_session()\n#session.use_schema(f\"{database_name}.{schema_name}\")\n\nlogger.info(\"07_load_daily_city_metrics start\")",
    "execution_count": null
   },
   {
@@ -47,7 +55,7 @@
     "name": "md_function",
     "collapsed": false
    },
-   "source": "## Create a function to check if a table exists\n\nThis function uses the [Snowflake Python Management API](https://docs.snowflake.com/en/developer-guide/snowflake-python-api/snowflake-python-overview)."
+   "source": "## Function to check if table exists\n\n[Snowflake Python Management API](https://docs.snowflake.com/en/developer-guide/snowflake-python-api/snowflake-python-overview)."
   },
   {
    "cell_type": "code",
@@ -57,7 +65,7 @@
     "name": "py_table_exists"
    },
    "outputs": [],
-   "source": "def table_exists(session, database_name='', schema_name='', table_name=''):\n    root = Root(session)\n    tables = root.databases[database_name].schemas[schema_name].tables.iter(like=table_name)\n    for table_obj in tables:\n        if table_obj.name == table_name:\n            return True\n\n    return False\n\n# Not used, SQL alternative to Python version above\ndef table_exists2(session, database_name='', schema_name='', table_name=''):\n    exists = session.sql(\"SELECT EXISTS (SELECT * FROM {}.INFORMATION_SCHEMA.TABLES WHERE TABLE_SCHEMA = '{}' AND TABLE_NAME = '{}') AS TABLE_EXISTS\".format(database_name, schema_name, table_name)).collect()[0]['TABLE_EXISTS']\n    return exists",
+   "source": "def table_exists(session, \n                 database_name='', \n                 schema_name  ='', \n                 table_name   =''):\n    \n    root   = Root(session)\n    tables = root.databases[database_name].schemas[schema_name].tables.iter(like=table_name)\n    \n    for table_obj in tables:\n        if table_obj.name == table_name:\n            return True\n\n    return False\n\n# Not used, SQL alternative to Python\ndef table_exists2(session, \n                  database_name='', \n                  schema_name  ='', \n                  table_name   =''):\n    \n    exists = session.sql(\"SELECT EXISTS (SELECT * FROM {}.INFORMATION_SCHEMA.TABLES WHERE TABLE_SCHEMA = '{}' AND TABLE_NAME = '{}') AS TABLE_EXISTS\".format(database_name, schema_name, table_name)).collect()[0]['TABLE_EXISTS']\n    return exists",
    "execution_count": null
   },
   {
@@ -79,7 +87,7 @@
     "codeCollapsed": false
    },
    "outputs": [],
-   "source": "import snowflake.snowpark.functions as F\n\ntable_name = \"DAILY_CITY_METRICS\"\n\n# Define the tables\norder_detail = session.table(\"ORDER_DETAIL\")\nhistory_day = session.table(\"FROSTBYTE_WEATHERSOURCE.ONPOINT_ID.HISTORY_DAY\")\nlocation = session.table(\"LOCATION\")\n\n# Join the tables\norder_detail = order_detail.join(location, order_detail['LOCATION_ID'] == location['LOCATION_ID'])\norder_detail = order_detail.join(history_day, (F.builtin(\"DATE\")(order_detail['ORDER_TS']) == history_day['DATE_VALID_STD']) & (location['ISO_COUNTRY_CODE'] == history_day['COUNTRY']) & (location['CITY'] == history_day['CITY_NAME']))\n\n# Aggregate the data\nfinal_agg = order_detail.group_by(F.col('DATE_VALID_STD'), F.col('CITY_NAME'), F.col('ISO_COUNTRY_CODE')) \\\n                        .agg( \\\n                            F.sum('PRICE').alias('DAILY_SALES_SUM'), \\\n                            F.avg('AVG_TEMPERATURE_AIR_2M_F').alias(\"AVG_TEMPERATURE_F\"), \\\n                            F.avg(\"TOT_PRECIPITATION_IN\").alias(\"AVG_PRECIPITATION_IN\"), \\\n                        ) \\\n                        .select(F.col(\"DATE_VALID_STD\").alias(\"DATE\"), F.col(\"CITY_NAME\"), F.col(\"ISO_COUNTRY_CODE\").alias(\"COUNTRY_DESC\"), \\\n                            F.builtin(\"ZEROIFNULL\")(F.col(\"DAILY_SALES_SUM\")).alias(\"DAILY_SALES\"), \\\n                            F.round(F.col(\"AVG_TEMPERATURE_F\"), 2).alias(\"AVG_TEMPERATURE_FAHRENHEIT\"), \\\n                            F.round(F.col(\"AVG_PRECIPITATION_IN\"), 2).alias(\"AVG_PRECIPITATION_INCHES\"), \\\n                        )\n\n# If the table doesn't exist then create it\nif not table_exists(session, database_name=database_name, schema_name=schema_name, table_name=table_name):\n    final_agg.write.mode(\"overwrite\").save_as_table(table_name)\n\n    logger.info(f\"Successfully created {table_name}\")\n# Otherwise update it\nelse:\n    cols_to_update = {c: final_agg[c] for c in final_agg.schema.names}\n\n    dcm = session.table(table_name)\n    dcm.merge(final_agg, (dcm['DATE'] == final_agg['DATE']) & (dcm['CITY_NAME'] == final_agg['CITY_NAME']) & (dcm['COUNTRY_DESC'] == final_agg['COUNTRY_DESC']), \\\n                        [F.when_matched().update(cols_to_update), F.when_not_matched().insert(cols_to_update)])\n\n    logger.info(f\"Successfully updated {table_name}\")\n",
+   "source": "import snowflake.snowpark.functions as F\n\ntable_name = \"DAILY_CITY_METRICS\"\n\n# Define\nhistory_day  = session.table(\"FROSTBYTE_WEATHERSOURCE.ONPOINT_ID.HISTORY_DAY\")\norder_detail = session.table(\"ORDER_DETAIL\")  # FROSTBYTE_RAW_STAGE 's3://sfquickstarts/data-engineering-with-snowpark-python/'\nlocation     = session.table(\"LOCATION\")      # FROSTBYTE_RAW_STAGE 's3://sfquickstarts/data-engineering-with-snowpark-python/'\n\n# Join\norder_detail = order_detail.join(location   ,                    order_detail['LOCATION_ID'     ] == location   ['LOCATION_ID'   ] )\norder_detail = order_detail.join(history_day, (F.builtin(\"DATE\")(order_detail['ORDER_TS'        ])== history_day['DATE_VALID_STD'] ) \n                                                                  & (location['ISO_COUNTRY_CODE'] == history_day['COUNTRY'       ] ) \n                                                                  & (location['CITY'            ] == history_day['CITY_NAME'     ] ) )\n\n# Aggregate\nfinal_agg = order_detail.group_by( F.col('DATE_VALID_STD'  ), \n                                   F.col('CITY_NAME'       ), \n                                   F.col('ISO_COUNTRY_CODE') \n                                   ) \\\n                        .agg     ( F.sum('PRICE'                   ).alias('DAILY_SALES_SUM'     ), \n                                   F.avg('AVG_TEMPERATURE_AIR_2M_F').alias(\"AVG_TEMPERATURE_F\"   ), \n                                   F.avg(\"TOT_PRECIPITATION_IN\"    ).alias(\"AVG_PRECIPITATION_IN\"), \n                                   ) \\\n                        .select  ( F.col(\"DATE_VALID_STD\"          ).alias(\"DATE\"                      ), \n                                   F.col(\"CITY_NAME\"               ).alias(\"CITY_NAME\"                 ),  \n                                   F.col(\"ISO_COUNTRY_CODE\"        ).alias(\"COUNTRY_DESC\"              ),          \n           F.builtin(\"ZEROIFNULL\")(F.col(\"DAILY_SALES_SUM\"     )   ).alias(\"DAILY_SALES\"               ),   # agg from above\n                           F.round(F.col(\"AVG_TEMPERATURE_F\"   ), 2).alias(\"AVG_TEMPERATURE_FAHRENHEIT\"),   # agg from above\n                           F.round(F.col(\"AVG_PRECIPITATION_IN\"), 2).alias(\"AVG_PRECIPITATION_INCHES\"  ),   # agg from above\n                                   )\n\n\nif not table_exists(session, \n                    database_name=database_name, \n                    schema_name  =schema_name, \n                    table_name   =table_name): # If table doesn't exist , create it\n    \n    final_agg.write.mode(\"overwrite\").save_as_table(table_name)\n\n    logger.info(f\"Successfully created {table_name}\")\n\nelse:                                                                    # Otherwise upsert\n    cols_to_update = {c: final_agg[c] for c in final_agg.schema.names}   # loop over all columns in finall_agg to create a dictionary mapping. new columns are added automatically.\n                   # {\n                   # \"DATE\"         : final_agg[\"DATE\"         ],\n                   # \"CITY_NAME\"    : final_agg[\"CITY_NAME\"    ],\n                   # \"COUNTRY_DESC\" : final_agg[\"COUNTRY_DESC\" ],\n                   # \"DAILY_SALES\"  : final_agg[\"DAILY_SALES\"  ],\n                   # \"AVG_TEMP\"     : final_agg[\"AVG_TEMP\"     ],\n                   # \"PRECIPITATION\": final_agg[\"PRECIPITATION\"]\n                   # }\n\n\n    dcm = session.table(table_name) # \"DAILY_CITY_METRICS\" - target table to merge into\n    \n    dcm.merge(final_agg,                                        # MERGE SOURCE: final_agg INTO DCM\n              #-------------------------------------------------# MERGE/JOIN KEYS\n              (dcm['DATE'        ] == final_agg['DATE'        ]) \n            & (dcm['CITY_NAME'   ] == final_agg['CITY_NAME'   ]) \n            & (dcm['COUNTRY_DESC'] == final_agg['COUNTRY_DESC']), \\\n              #------------------------------------------------ # MERGE ACTIONS (match = update, notfound = insert)\n            [F.when_matched    ().update(cols_to_update), \n             F.when_not_matched().insert(cols_to_update)]\n             )\n\n    logger.info(f\"Successful update: {table_name}\")\n",
    "execution_count": null
   },
   {
@@ -100,7 +108,7 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": "--SELECT * FROM DAILY_CITY_METRICS LIMIT 10;",
+   "source": "SELECT * FROM DAILY_CITY_METRICS LIMIT 10;",
    "execution_count": null
   }
  ]
